# persona-you

./: .gitignore  README.md  pyproject.toml
data/schema/: memory.v1.json  message.v1.json
scripts/: chat.py  ingest.py  mem.py  wipe.py
src/persona_you/: __init__.py  cli.py
